Lightbox fixed, on mobile dark background and closebutton right top outside the pic

--- a/Kwf_js/EyeCandy/Lightbox/Lightbox.css
+++ b/Kwf_js/EyeCandy/Lightbox/Lightbox.css
@@ -1,5 +1,5 @@
 .kwfLightbox {
-    position: absolute;
+    position: fixed;
     z-index: 100;
     top: 0; left: 0;
     height: 100%;
@@ -27,8 +27,9 @@
 }
 
 .kwfLightbox.mobile .closeButton {
-    top: 0;
-    right: 0;
+    position: fixed;
+    right: 12px;
+    top: 12px;
 }
 .kwfLightbox.mobile .kwfLightboxInner {
     margin-bottom: 0;
@@ -106,4 +107,10 @@
     filter: alpha(opacity=80);
     z-index: 50 !important;
     position: fixed;
+}
+
+@media (max-width: 650px) {
+    body .lightboxMask {
+        opacity: 1;
+    }
 }
